# DIO-Python_AI_Backend_Dev

./: Makefile  README.md
Desafios de Código/: 02 - Criando uma Lista de Equipamentos.py  desafio_sistema_bancario_01.py  desafio_sistema_bancario_02_otimizado.py
Desafios_de_Codigo/: 01 - Verificador de Planos de Internet.py  04_Criando_uma_Classe_usuario.py  05_Add_funcionalidades_plano.py  06_Realizando_chamadas.py  desafio_sistema_bancario_03_POO.py  desafio_sistema_bancario_04_dec_iter_ger.py  desafio_sistema_bancario_05_datetime_lmite_dia.py  desafio_sistema_bancario_06_persistencia_arquivo.py  log.txt
Desafios_de_Código/: 03 - Validando Número de Telefone.py  desafio_sistema_bancario_02_otimizado.py
POO/: 01_desafio bicicletaria.py  02_heranca_simples.py  03_heranca_multipla.py  04_encapsulamento.py  05_propriedades_01.py  06_propriedades_02.py  07_polimorfismo.py  08_metodos_classe_estatico.py  09_classe_abstrata.py  10_decorador_01.py  11_decorador_02.py  12_iterador.py  13_gerador.py  14_datetime.py  15_manipulacao_arquivos.py  16_manipulacao_arquivos_csv.py
Primeiros Passos com Python/: primeiro_programa.py
Primeiros_Passos_com_Python/: 03_conversao_tipos.py  04_funcoes_entrada_saida.py  primeiro_programa.py  (+1 more)
projeto_api_tdd/: pyproject.toml
projeto_api_tdd/store/controllers/: product.py
projeto_api_tdd/store/core/: exceptions.py
projeto_api_tdd/store/schemas/: base.py  product.py  products.py
projeto_api_tdd/store/usecases/: product.py
projeto_api_tdd/tests/: conftest.py
projeto_api_tdd/tests/schemas/: test_product.py
(+59 files in other folders)
